# envguard

./: .envguardrc  .gitignore  README.md  pyproject.toml
envguard/: __init__.py  allowlist.py  cli.py  gitignore.py  reporter.py  rules.py  scanner.py
tests/: test_scanner.py
tests/test_fixtures/: fake_clean.py  fake_config.py  fake_env
