[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "0.1.0"
description = "A secret scanner for codebases -- detect leaked API keys, tokens, and credentials before they reach production."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Orianna Arvelo Ramirez", email = "orianna1510@gmail.com"},
]
keywords = ["security", "secrets", "scanner", "devops", "ci-cd", "api-keys"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
envguard = "envguard.cli:main"

[project.urls]
Homepage = "https://github.com/oriannadev/envguard"
Repository = "https://github.com/oriannadev/envguard"
Issues = "https://github.com/oriannadev/envguard/issues"

[tool.setuptools.packages.find]
include = ["envguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["envguard"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
